fix: Not found page and dark mode

--- a/src/app/base-elements/not-found-page/not-found-page.component.scss
+++ b/src/app/base-elements/not-found-page/not-found-page.component.scss
@@ -1,21 +1,4 @@
-.container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: calc(100vh - 2em);
-  padding: 1em;
-  background: #fff;
-  background: radial-gradient(
-    ellipse at center,
-    rgba(255, 254, 234, 1) 0%,
-    rgba(255, 254, 234, 1) 35%,
-    #b7e8eb 100%
-  );
-}
-
 .wrapper {
-  display: flex;
-  align-items: center;
   flex-direction: row;
 
   .not_found {
@@ -29,7 +12,7 @@
     }
 
     &__text {
-      margin-left: 1em;
+      margin-left: 1.5em;
 
       .title {
         margin-top: 0;
